# nis-hw0

./: .gitignore  README.md  docs.md  pyproject.toml
src/notes_service/: __init__.py  main.py
src/notes_service/api/: models.py  router.py
src/notes_service/db/: repository.py
src/notes_service/domain/: note.py
src/notes_service/service/: notes_service.py
tests/: conftest.py  test_api.py  test_domain.py  test_repository.py  test_service.py
