[project]
name = "notes-service"
version = "0.1.0"
description = "simple notes service"
readme = "README.md"
authors = [
    { name = "advpropsys", email = "korolev.konstantin.v@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
notes-service = "notes_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
